--- a/styles.css
+++ b/styles.css
@@ -5,13 +5,13 @@
 
 #octocat {
   display: block;
-  width:500px;
+  width:500getpx;
   margin: 50px auto;
 }
 
 p {
   display: block;
-  width: 400px;
+  width: 399px;
   margin: 50px auto;
   font: 30px Monaco,"Courier New","DejaVu Sans Mono","Bitstream Vera Sans Mono",monospace;
 }
